Fix text overflow style, fix form padding

--- a/client/src/styles/modal.module.css
+++ b/client/src/styles/modal.module.css
@@ -19,9 +19,10 @@
   max-height: 50vh;
   margin-top: -25vh;
   margin-left: -40vw;
-  background-color: #192124;
+  /* background-color: #192124; */
   border-radius: 10px;
   color: #eee;
+  background-color: #151d20;
   z-index: 4;
   overflow: hidden;
 }
@@ -30,7 +31,8 @@
   display: flex;
   align-items: center;
   min-height: 80px;
-  background-color: #151d20;
+  /* background-color: #151d20; */
+  background-color: #121a1d;
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   border-bottom: 1px #383f41 solid;
@@ -58,7 +60,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 25px;
+  padding: 25px 0;
+  padding-right: 6px;
   align-items: center;
   flex-shrink: 1;
   overflow-y: hidden;
@@ -107,8 +110,7 @@
   justify-content: flex-end;
   align-self: flex-end;
   min-height: 45px;
-  margin-bottom: 0;
-  margin-top: 10px;
+  margin: 10px 25px 0 auto;
 }
 
 .formCancelSubmitButtonGroup button {
@@ -147,13 +149,26 @@
 .checkboxLabel,
 .editTextLabel {
   white-space: nowrap;
-  overflow: hidden;
+  /* overflow: hidden; */
   text-overflow: ellipsis;
+  transition: 0.3s ease-out;
   display: flex;
-  min-height: 5px;
+  min-height: 7px;
   white-space: nowrap;
   vertical-align: middle;
-  padding: 10px 0;
+  padding: 10px 10px;
+}
+
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  margin: 0 25px;
+  padding: 10px 20px;
+  border-radius: 7px;
+}
+
+.checkboxLabel:hover {
+  background-color: #2f3638;
 }
 
 .checkboxLabel:active {
